--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -7,84 +7,56 @@
     }
     string baseUrl = Request.Url.Scheme + "://" + Request.Url.Authority + Request.ApplicationPath.TrimEnd('/');
 }
-<div class="top-header">
-    <div class="container">
-        <div class="currency"><a href="tel:@commonInfo.HotLine">Click để gọi: @commonInfo.HotLine</a></div>
-        <div class="top-bar-social">
-            <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
-            @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
-            {
-                <a href="@commonInfo.FaceBookLink" target="_blank"><i class="fa fa-facebook"></i></a>
-            }
-            <a href="javascript:doGTranslate('vi|vi');" title="Dịch sang tiếng Việt" class="notranslate hidden-lg hidden-md">Vi |</a> 
-            <a href="javascript:doGTranslate('vi|en');" title="Dịch sang tiếng anh" class="notranslate  hidden-lg hidden-md">En</a>
-        </div>
-        <div class="support-link">            
-            <a href="/home/contact">Hỗ trợ</a>
-             <a href="javascript:doGTranslate('vi|vi');" title="Dịch sang tiếng Việt" class="notranslate">Tiếng Việt </a>
-            <a href="javascript:doGTranslate('vi|en');" title="Dịch sang tiếng anh" class="notranslate">English</a>
-        </div>
-    </div>
-</div>
 <div class="container main-header">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-3 logo">
+        <div class="col-xs-12 col-sm-12 col-md-2 logo">
             <a href="/"><img alt="@commonInfo.Desc" src="@commonInfo.Logo" /></a>
         </div>
-        <div class="col-xs-7 col-sm-8 col-md-7 header-search-box" itemscope itemtype="baseUrl">
-            <form class="form-inline" action="/search" name="search" id="search" method="get" role="search">
-                <meta itemprop="url" content="@(baseUrl+"/search")" />
-                <meta itemprop="target" content="@(baseUrl+"/search?keyword={keyword}")" />
-                <div class="form-group form-category">
-                    <select class="select-category" name="category">
-                        <option value="0">Danh mục sản phẩm</option>
-                        @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-                        {
-                            for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
+        <div class="col-xs-12 col-sm-12 col-md-7">
+            @if (ViewData["ads1"] != null)
+            {
+                Ads[] slide = (Ads[])ViewData["ads1"];
+                if (slide.Length > 0)
+                {
+                    Ads ads = slide.ToList().OrderBy(x => Guid.NewGuid()).FirstOrDefault();
+                    <a href="@ads.ClickUrl" target="_blank">
+                        <img src="@ads.ImagesUrl" alt="@ads.Description" />
+                    </a>
+                }
+            }
+         </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 header-search-box" itemscope itemtype="baseUrl">
+                <form class="form-inline" action="/search" name="search" id="search" method="get" role="search">
+                    <meta itemprop="url" content="@(baseUrl+"/search")" />
+                    <meta itemprop="target" content="@(baseUrl+"/search?keyword={keyword}")" />
+                    <div class="form-group form-category">
+                        <select class="select-category" name="category">
+                            <option value="0">Tìm kiếm</option>
+                            @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                             {
-
-                                <option value="c-@commonInfo.ProductCategoryList[i].Id">@commonInfo.ProductCategoryList[i].Name</option>
-                                if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
+                                for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
                                 {
-                                    for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
+
+                                    <option value="c-@commonInfo.ProductCategoryList[i].Id">@commonInfo.ProductCategoryList[i].Name</option>
+                                    if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
                                     {
-                                        <option value="@commonInfo.ProductCategoryList[i].ChildCategory[j].Id">@Anpero.StringHelpper.SubString(20, commonInfo.ProductCategoryList[i].ChildCategory[j].Name)</option>
+                                        for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
+                                        {
+                                            <option value="@commonInfo.ProductCategoryList[i].ChildCategory[j].Id">@Anpero.StringHelpper.SubString(20, commonInfo.ProductCategoryList[i].ChildCategory[j].Name)</option>
+                                        }
                                     }
                                 }
                             }
-                        }
-                    </select>
-                </div>
-                <div class="form-group input-serach">
-                    <input type="text" placeholder="Tìm kiếm ..." name="keyword" itemprop="query-input" required>
-                </div>
-                <button type="submit" class="pull-right btn-search" id="btnSearch"></button>
-            </form>
-        </div>
-        <div class="col-xs-5 col-sm-3 col-md-2 group-button-header">
-            <a target="_blank" title="Chia sẻ trên google+" href="https://plus.google.com/share?url=@HttpContext.Current.Request.RawUrl" class="btn-heart">wishlist</a>
-            <div class="btn-cart" id="cart-block">
-                <a title="My cart" href="/product/checkout">Cart</a>
-                <span class="notify notify-right spN"></span>
-                <div class="cart-block">
-                    <div class="cart-block-content">
-                        <h5 class="cart-title"><span class="spN"></span> Sản phẩm</h5>
-                        <div class="cart-block-list">
-                            <ul id="prCatCt"></ul>
-                        </div>
-                        <div class="toal-cart">
-                            <span>Total</span>
-                            <span class="toal-price pull-right" id="ttSC"></span>
-                        </div>
-                        <div class="cart-buttons">
-                            <a href="/product/checkout" class="btn-check-out">Thanh toán</a>
-                        </div>
+                        </select>
                     </div>
-                </div>
+                    <div class="form-group input-serach">
+                        <input type="text" placeholder="Tìm kiếm ..." name="keyword" itemprop="query-input">
+                    </div>
+                    <button type="submit" class="pull-right btn-search" id="btnSearch"></button>
+                </form>
             </div>
         </div>
-    </div>
 </div>
 
 
-    
+
