--- a/02_BDS_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
@@ -208,7 +208,7 @@
             Cart.bindCart();
         });
     </script>
-    @if (ViewData["AdsSlide"] != null)
+    @*@if (ViewData["AdsSlide"] != null)
     {
         Ads[] slide = (Ads[])ViewData["AdsSlide"];
         if (slide.Length > 0)
@@ -234,6 +234,6 @@
 
         }
 
-    }
+    }*@
 </body>
 </html>
