--- a/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -11,14 +11,15 @@
                 @foreach (var item in slide)
                 {
                     <div class="sp-slide">
-                        <img class="sp-image" src="@item.ImagesUrl" data-src="@item.ImagesUrl" data-retina="@item.ImagesUrl" />
-                        @if (!string.IsNullOrEmpty(item.Description))
-                        {
-                            <p class="sp-layer sp-white sp-padding" data-vertical="10" data-horizontal="2%" data-width="96%" data-show-transition="down" data-show-delay="400" data-hide-transition="up">
-                                <a href="@item.ClickUrl" >@item.Description</a>
-                            </p>
-                        }
-                    </div>
+                        <a href="@item.ClickUrl">
+                            <img class="sp-image" src="@item.ImagesUrl" data-src="@item.ImagesUrl" data-retina="@item.ImagesUrl" style="max-height:350px;" /></a>
+                            @if (!string.IsNullOrEmpty(item.Description))
+                            {
+                                <p class="sp-layer sp-white sp-padding" data-vertical="10" data-horizontal="2%" data-width="96%" data-show-transition="down" data-show-delay="400" data-hide-transition="up">
+                                    <a href="@item.ClickUrl">@item.Description</a>
+                                </p>
+                            }
+</div>
 
                 }
 
