--- a/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -5,40 +5,38 @@
     @if (ViewData["AdsSlide"] != null)
     {
         Ads[] slide = (Ads[])ViewData["AdsSlide"];
-        if (slide!=null  &&  slide.Length > 0)
-        {  
+        if (slide != null && slide.Length > 0)
+        {
             <div id="example5" class="slider-pro">
                 @foreach (var item in slide)
                 {
                     <div class="sp-slide">
                         <a href="@item.ClickUrl">
-                            <img class="sp-image" src="@item.ImagesUrl" data-src="@item.ImagesUrl" data-retina="@item.ImagesUrl" style="max-height:350px;" /></a>
-                            @if (!string.IsNullOrEmpty(item.Description))
-                            {
-                                <p class="sp-layer sp-white sp-padding" data-vertical="10" data-horizontal="2%" data-width="96%" data-show-transition="down" data-show-delay="400" data-hide-transition="up">
-                                    <a href="@item.ClickUrl">@item.Description</a>
-                                </p>
-                            }
-</div>
-
-                }
-
-
-                    <div class="sp-thumbnails">
-                        @foreach (var item in slide)
+                            <img class="sp-image" src="@item.ImagesUrl" data-src="@item.ImagesUrl" data-retina="@item.ImagesUrl" style="max-height:350px;" />
+                        </a>
+                        @if (!string.IsNullOrEmpty(item.Description))
                         {
-
-                            <div class="sp-thumbnail">
-                                <div class="sp-thumbnail-image-container">
-                                    <img class="sp-thumbnail-image" src="@item.ImagesUrl" />
-                                </div>
-                                <div class="sp-thumbnail-text">
-                                    <div class="sp-thumbnail-title">@item.Description</div>
-                                </div>
-                            </div>
+                            <p class="sp-layer sp-white sp-padding" data-vertical="10" data-horizontal="2%" data-width="96%" data-show-transition="down" data-show-delay="400" data-hide-transition="up">
+                                <a href="@item.ClickUrl">@item.Description</a>
+                            </p>
                         }
-
                     </div>
+                }
+                <div class="sp-thumbnails">
+                    @foreach (var item in slide)
+                    {
+
+                        <div class="sp-thumbnail">
+                            <div class="sp-thumbnail-image-container">
+                                <img class="sp-thumbnail-image" src="@item.ImagesUrl" />
+                            </div>
+                            <div class="sp-thumbnail-text">
+                                <div class="sp-thumbnail-title">@item.Description</div>
+                            </div>
+                        </div>
+                    }
+
+                </div>
             </div>
         }
     }
