--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -124,7 +124,7 @@
     @RenderBody()
     <script src="//media.anpero.com/cdn/plugins/jquery-1.10.2.min.js"></script>
     <script src="//media.anpero.com/cdn/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b7a515bc8da872d"></script>
 
 
     @Scripts.Render("~/bundles/bootstrap")
@@ -217,47 +217,47 @@
                 }
                 else
                 {
-                <div class="col-md-4">
+                    <div class="col-md-4">
 
-                    <div class="address-box">
+                        <div class="address-box">
 
-                        <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
-                        <div class="adrct">
-                            <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
-                            <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
+                            <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
+                            <div class="adrct">
+                                <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
+                                <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
 
-                            @if (!string.IsNullOrEmpty(commonInfo.Email))
-                            {
-                                <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
-                            }
-
-                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                            {
-                                <div class="tit-name">Skype:</div>
-                                <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
-                            }
-
-                        </div>
-                        @{
-
-                            string thisUrl = Request.Url.AbsoluteUri;
-                            <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
-                            <div class="social-link">
-                                @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                @if (!string.IsNullOrEmpty(commonInfo.Email))
                                 {
-                                    <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                    <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
                                 }
+
                                 @if (!string.IsNullOrEmpty(commonInfo.Skype))
                                 {
-                                    <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                    <div class="tit-name">Skype:</div>
+                                    <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
                                 }
-                                <a href="//plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
-                                <a href="//pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
-                                <a href="//www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+
                             </div>
-                        }
+                            @{
+
+                                string thisUrl = Request.Url.AbsoluteUri;
+                                <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
+                                <div class="social-link">
+                                    @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                    {
+                                        <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                    }
+                                    @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                    {
+                                        <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                    }
+                                    <a href="//plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
+                                    <a href="//pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
+                                    <a href="//www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+                                </div>
+                            }
+                        </div>
                     </div>
-                </div>
                     <div class="col-md-4  col-sm-12">
                         <div class="row">
                             <div class="col-sm-12">
