--- a/04_Shop_multiProduct/Views/Product/Category.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Category.cshtml
@@ -191,7 +191,7 @@
                                                     @if (item.IsSale)
                                                     {
                                                         <div class="content_price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-                                                            <span class="price product-price" itemprop="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
+                                                            <span class="price product-price" itemprop="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice)</span>
                                                             <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)</span>
                                                         </div>
                                                     }
