--- a/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
@@ -44,14 +44,14 @@
 
                     @if (item.IsSale)
                     {
-                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ </span>
+                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) </span>
 
-                                        <span class="old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                                        <span class="old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
                                         <span class="discount">giảm @Anpero.StringHelpper.ConVertToMoneyFormatInt(((item.Price - item.SalePrice) / item.Price * 100).ToString()) %</span>
                     }
                     else
                     {
-                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
                     }
                 </div>
                 <div class="info-orther">
